force-app/main/default/objects/Encrypted_Payload__e/Encrypted_Payload__e.object-meta.xml
<CustomObject>
    <label>Encrypted Payload</label>
    <pluralLabel>Encrypted Payloads</pluralLabel>
</CustomObject>