force-app/main/default/objects/Encrypted_Payload__e/fields/Encrypted_Payload__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Payload__c</fullName>
    <label>Encrypted Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>