force-app/main/default/objects/Encrypted_Payload__e/fields/Encrypted_Session_Key__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Session_Key__c</fullName>
    <label>Encrypted Session Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>