force-app/main/default/objects/Encrypted_Payload__e/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Signature</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>